# ccoder

./: .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml
app/: __init__.py  command_registry.py  context.py  feature_flags.py  input_modes.py  main.py  permissions.py  query_engine.py  settings.py  streaming_tool_executor.py  tool.py  tool_registry.py
app/bootstrap/: state.py
app/commands/: __init__.py  bash_exec.py  branch_cmd.py  config_commands.py  diff_cmd.py  env_commands.py  exit_cmd.py  export_cmd.py  help.py  info_commands.py  model_cmd.py  rename_cmd.py  rewind_cmd.py  session_cmd.py
app/components/: command_suggestions.py  logo_header.py  messages.py  permission_prompt.py  prompt_input.py  spinner.py  status_bar.py
app/entrypoints/: cli.py
app/query/: __init__.py  deps.py  loop.py  token_budget.py  tool_result_budget.py  types.py
app/screens/: repl.py
docs/: ARCHITECTURE_AND_IMPLEMENTATION_PLAN.md  feature-comparison.md  tui-implementation-plan.md  tui-input-commands-analysis.md
tests/: conftest.py  test_api_client.py  test_app_state.py  test_bash_exec.py  test_builtin_commands.py  test_command_registry.py  test_commands.py  test_commands_extended.py  test_compaction.py  test_components.py  test_context.py  test_context_enhanced.py  test_hooks.py  test_input_modes.py  test_main.py  test_message_normalization.py  test_permissions.py  test_query.py  test_query_engine.py  test_query_hardening.py  test_repl.py  test_settings.py  test_streaming_executor.py  test_tool.py  test_tool_concurrency.py  test_tool_executor.py  test_types.py
(+30 files in other folders)
