[project]
name = "ccoder"
version = "0.1.0"
description = "Python implementation of Claude Code CLI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "textual>=0.80.0",
    "json5>=0.9.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.0",
    "html2text>=2024.2.26",
    "nbformat>=5.10.0",
]

[project.scripts]
ccoder = "app.entrypoints.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]
